--- a/Proj7/app/src/main/AndroidManifest.xml
+++ b/Proj7/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ex18">
+    package="com.example.proj7">
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ex18">
-        <activity android:name=".MenuActivity"></activity>
+        android:theme="@style/Theme.Proj7">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
